// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`enzyme.mount 1`] = `
.css-1xhpmu3 > div,
[data-css-1xhpmu3] > div {
  border-radius: 100%;
  height: 60px;
  margin: 2px;
  width: 60px;
  background-color: #ffffff;
  animation-fill-mode: both;
  animation: animation_3rvwq6 1s 0s ease-in-out infinite;
  display: inline-block;
  -webkit-animation-fill-mode: both;
  -webkit-animation: animation_3rvwq6 1s 0s ease-in-out infinite;
}

<BallScale
  loading={true}
>
  <div
    data-css-1xhpmu3=""
  >
    <div />
  </div>
</BallScale>
`;

exports[`enzyme.render 1`] = `
.css-1xhpmu3 > div,
[data-css-1xhpmu3] > div {
  border-radius: 100%;
  height: 60px;
  margin: 2px;
  width: 60px;
  background-color: #ffffff;
  animation-fill-mode: both;
  animation: animation_3rvwq6 1s 0s ease-in-out infinite;
  display: inline-block;
  -webkit-animation-fill-mode: both;
  -webkit-animation: animation_3rvwq6 1s 0s ease-in-out infinite;
}

<div
  data-css-1xhpmu3=""
>
  <div />
</div>
`;

exports[`enzyme.shallow 1`] = `
.css-1xhpmu3 > div,
[data-css-1xhpmu3] > div {
  border-radius: 100%;
  height: 60px;
  margin: 2px;
  width: 60px;
  background-color: #ffffff;
  animation-fill-mode: both;
  animation: animation_3rvwq6 1s 0s ease-in-out infinite;
  display: inline-block;
  -webkit-animation-fill-mode: both;
  -webkit-animation: animation_3rvwq6 1s 0s ease-in-out infinite;
}

<div
  data-css-1xhpmu3=""
>
  <div />
</div>
`;
